# client_server_json

./: CMakeLists.txt  LICENSE  README.md  client_main.cpp  server_main.cpp
include/client/: client.h  connection.h
include/json/: json_parser.h
include/network/: connection.h  stream.h  stream_manager.h
include/network/linux/: libev.h  stream_manager.h  tcp_stream.h
include/server/: connection.h  dictionary.h  json_parser.h  server.h  statistics.h
source/client/: client.cpp  connection.cpp
source/json/: json_parser.cpp
source/network/: connection.cpp
source/network/linux/: libev.cpp  stream_manager.cpp  tcp_stream.cpp
source/server/: connection.cpp  dictionary.cpp  server.cpp
tests/: CMakeLists.txt  client_tests.cpp  client_tests_main.cpp  server_tests.cpp  stream_test.h
